# bitcal

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Base.h  BitCal.cpp  BitCal.h  BitCalGpr.cpp  BitCalGpr.h  BitCalXmm.cpp  BitCalXmm.h  BitCalYmm.cpp  BitCalYmm.h  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  CMakeLists.txt  CMakeLists_new.txt  CONTRIBUTING.md  CheckCpu.h  Encode.cpp  Encode.h  EncodeGpr.cpp  EncodeGpr.h  EncodeYmm.cpp  EncodeYmm.h  LICENSE  MIGRATION_GUIDE.md  README.en.md  README.md  README.zh-CN.md  REFACTOR_NOTES.md  RELEASE_NOTES.md  SUMMARY.md  bitcal_dispatch.cpp  index.html  (+1 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  pages.yml  release.yml  sanitizers.yml  static-analysis.yml
.omc/: project-memory.json
.openspec/: migration-plan.md
benchmarks/: CMakeLists.txt  benchmark_bitcal.cpp
changelog/: 2026-01-08-code-cleanup.md  2026-01-08-hardware-dispatch-foundation.md  2026-01-08-major-refactor-v2.0.md  2026-01-08-structure-and-docs.md  2026-02-27-engineering-optimization.md  2026-02-27-optimization-v2.1.md  2026-03-10-pages-optimization.md  2026-03-10_workflow-deep-standardization.md
cmake/: bitcal-config.cmake.in
docs/: README.md  index.html  project-status.md
docs/api/: bit-counting.md
docs/architecture/: overview.md
docs/assets/: scripts.js  search-index.json  styles.css
docs/en/: README.md
docs/en/api/: bit-counting.html  bit-manipulation.html  bit-manipulation.md  core-operations.html  core-operations.md  ops-namespace.html  ops-namespace.md  shift-operations.html  shift-operations.md  simd-backend.html  simd-backend.md  types.html  types.md
docs/en/architecture/: overview.html  overview.md  platform-support.html  platform-support.md  simd-dispatch.html  simd-dispatch.md
docs/en/changelog/: v2.0.0.html  v2.0.0.md  v2.1.0.html  v2.1.0.md
docs/en/getting-started/: build-options.html  build-options.md  installation.html  installation.md  quickstart.html  quickstart.md
docs/internal/: refactor-notes.md  release-notes.md
docs/setup/: migration-guide.md  quickstart.md
docs/zh/: README.md  index.html
docs/zh/api/: bit-counting.html  bit-manipulation.html  core-operations.html  core-operations.md  ops-namespace.html  shift-operations.html  shift-operations.md  simd-backend.html  types.html  types.md
docs/zh/architecture/: overview.html  overview.md  platform-support.html  platform-support.md  simd-dispatch.html  simd-dispatch.md
docs/zh/changelog/: v2.0.0.html  v2.0.0.md  v2.1.0.html  v2.1.0.md
docs/zh/getting-started/: build-options.html  build-options.md  installation.html  installation.md  quickstart.html  quickstart.md
examples/: CMakeLists.txt  basic_usage.cpp  performance_comparison.cpp
gitbook/: README.md  SUMMARY.md  book.json
gitbook/api/: bit-counting.md  bit-manipulation.md  core-operations.md  ops-namespace.md  simd-backend.md  types.md
gitbook/architecture/: overview.md  platform-support.md
gitbook/changelog/: v2.0.0.md  v2.1.0.md
gitbook/getting-started/: build-options.md  installation.md  quickstart.md
include/bitcal/: avx512_ops.hpp  avx_ops.hpp  bitcal.h  bitcal.hpp  config.hpp  encode.h  neon_ops.hpp  scalar_ops.hpp  simd_traits.hpp  sse_ops.hpp
openspec/: config.yaml
openspec/changes/archive/2024-04-16-core-architecture/: design.md  proposal.md  tasks.md
openspec/changes/archive/2024-04-17-simd-optimizations/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-26-finalize-bitcal/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-26-finalize-bitcal/specs/bit-manipulation-library/: spec.md
openspec/changes/archive/2026-04-26-finalize-bitcal/specs/bitcal-public-api/: spec.md
openspec/changes/archive/2026-04-26-finalize-bitcal/specs/bitcal-testing-spec/: spec.md
openspec/changes/archive/2026-04-26-finalize-bitcal/specs/project-ai-collaboration/: spec.md
openspec/changes/archive/2026-04-26-finalize-bitcal/specs/project-documentation-site/: spec.md
openspec/changes/archive/2026-04-26-finalize-bitcal/specs/project-engineering-pipeline/: spec.md
openspec/changes/archive/2026-04-26-finalize-bitcal/specs/project-governance/: spec.md
openspec/specs/api/: bitcal-public-api.md
openspec/specs/product/: bit-manipulation-library.md
openspec/specs/project/: project-ai-collaboration.md  project-documentation-site.md  project-engineering-pipeline.md  project-governance.md
openspec/specs/rfc/: 0001-core-architecture.md  0002-simd-optimizations.md
openspec/specs/testing/: bitcal-testing-spec.md
spdlog/: spdlog.h
specs/: README.md
specs/api/: bitcal-public-api.md
src/Utils/: CheckCpu.h
src/legacy/: bit_cal.cpp  bit_cal.h  bit_cal_gpr.cpp  bit_cal_gpr.h  bit_cal_xmm.h  bit_cal_ymm.cpp  bitcal_dispatch.cpp  bitcal_dispatch.h  check_cpu.cpp  encode_dispatch.cpp  encode_dispatch.h
tests/: CMakeLists.txt  test_bitcal.cpp
