add_executable(basic_usage basic_usage.cpp)
target_link_libraries(basic_usage PRIVATE bitcal)
target_compile_features(basic_usage PRIVATE cxx_std_17)
if(BITCAL_SIMD_FLAGS)
  target_compile_options(basic_usage PRIVATE ${BITCAL_SIMD_FLAGS})
endif()

add_executable(performance_comparison performance_comparison.cpp)
target_link_libraries(performance_comparison PRIVATE bitcal)
target_compile_features(performance_comparison PRIVATE cxx_std_17)
if(BITCAL_SIMD_FLAGS)
  target_compile_options(performance_comparison PRIVATE ${BITCAL_SIMD_FLAGS})
endif()
